--- a/src/components/polaroid.css
+++ b/src/components/polaroid.css
@@ -1,5 +1,54 @@
+
+@media (min-width:320px) { 
+    .main-polaroid{
+        margin-top: 40px;
+    }
+    .polaroid{
+        float: left;
+        padding: 10px 10px 35px 10px;
+        background: #eee;
+        border: 1px solid #fff;
+        margin-bottom: 15px;
+        margin-right:10px;
+        -moz-box-shadow: 0px 2px 15px #333;
+        -webkit-box-shadow: 0px 2px 15px #333;
+        -o-box-shadow: 0px 2px 15px #333;
+    }
+    
+    .polaroid .img {
+        width:310px;
+        height:410px;
+    }
+ }
+@media (min-width:480px) { 
+    .main-polaroid{
+        margin-left: 10%;
+        margin-top: 40px;
+    }
+    .polaroid{
+        float: left;
+        padding: 10px 10px 35px 10px;
+        background: #eee;
+        border: 1px solid #fff;
+        margin-bottom: 15px;
+        margin-right:10px;
+        -moz-box-shadow: 0px 2px 15px #333;
+        -webkit-box-shadow: 0px 2px 15px #333;
+        -o-box-shadow: 0px 2px 15px #333;
+    }
+    
+    .polaroid .img {
+        width:310px;
+        height:410px;
+    }
+ }
+@media (min-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
+@media (min-width:801px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+
+@media (min-width:1281px) { 
 .main-polaroid{
-    margin-left: 35%;
+    margin-left: 30vw;
     margin-top: 40px;
 }
 .polaroid{
@@ -17,4 +66,4 @@
 .polaroid .img {
     width:310px;
     height:410px;
-}
+}}
