--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -33,7 +33,7 @@ body{
   margin: auto;
   margin-top: 10px;
   width: 80%;
-  height: 90vh;
+  min-height: 100vh;
   background-color: #f0f0f5;;
   box-shadow: 0 0 100px rgba(0 , 0 , 0 , 0.1);
   border-radius: 8px;
